# trust-rag-agent-enterprise-qa

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
docs/: AGENT_RESIDUAL_CASES_DRAFT.md  AGENT_RESIDUAL_HARD_OBFUSCATED_DRAFT.md  CITATION_AUDIT.md  CITATION_AUDIT_GUIDE.md  CORPUS_PROTOCOL.md  EVALUATION_REPORT.md  EVAL_CASE_REVIEW_WEEK1.md  EVAL_LEAKAGE_REPORT.md  EVAL_LEAKAGE_REPORT_C2_05_HARDNEG_REWRITTEN.md  EVAL_PROTOCOL.md  FAILURE_ANALYSIS.md  HARD_NEGATIVE_ADJUDICATION.md  INTERVIEW_QA.md  JUDGE_AGREEMENT_REPORT.md  JUDGE_PROTOCOL.md  P3_09_DIAGNOSTIC_PRECHECK.md  P3_AGENT_BUILD_INSTRUCTION.md  PRINCIPLES.md  PROMPT_DESIGN_REVIEW.md  Q1_EXECUTION_SPEC.md  Q1_HARD_DEMO_TASK_PLAN.md  Q2_AGENT_DESIGN.md  README_DRAFT.md  REDTEAM_ADJUDICATION_PREANALYSIS.md  REDTEAM_INJECTION_REPORT.md  REDTEAM_INJECTION_SPLIT.md  ROADMAP.md  SCHEMA_REVIEW_CHECKLIST.md  SCOPE_CUT_REVIEW.md  SPEC_C1_00_ARTIFACT_PERSISTENCE.md  SPEC_C2_05_HARDNEG_REWRITE.md  SPEC_P3_05_LLM_CONTROLLER.md  SPEC_P3_06_ATTRIBUTION.md  SPEC_P3_08_RESIDUAL_TESTBED.md  SPEC_P3_09_ABLATION_RUN.md  SPEC_P3_09_REVISED_SCARCITY.md  SPEC_P3_AGENT_SKELETON.md  SPEC_PHASE2_JUDGE.md  STUDY_CHECKLIST.md  TECHNICAL_DESIGN.md  (+4 more)
scripts/: __init__.py  build_hard_negatives.py  check_eval_leakage.py  check_eval_regression.py  demo_queries.py  fetch_public_corpus.py  ingest_corpus.py  rebuild_indexes.py  run_agent_diagnostic_precheck.py  run_eval.py  run_judge_agreement.py  run_p3_agent_ablation.py  run_redteam_injection_eval.py  (+4 more)
(+314 files in other folders)
