[project]
name = "trust-rag-agent-enterprise-qa"
version = "0.1.0"
description = "Trustworthy Enterprise Document RAG-Agent QA System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111,<1.0",
    "httpx>=0.27,<1.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "PyYAML>=6.0,<7.0",
    "python-dotenv>=1.0,<2.0",
    "python-frontmatter>=1.1,<2.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.5,<1.0",
]

